# snark-verifier

./: .gitignore  Cargo.toml  README.md  super.sh  tests.sh
configs/: verify_circuit.config
examples/: README.md  evm-verifier-with-accumulator.rs  evm-verifier.rs
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/benches/: standard_plonk.rs  zkevm.rs  zkevm_plus_state.rs
snark-verifier-sdk/configs/: bench_zkevm.config  two_layer_recursion_first_layer.config  two_layer_recursion_second_layer.config
snark-verifier-sdk/src/: aggregation.rs  circuit_ext.rs  evm.rs  evm_api.rs  file_io.rs  halo2.rs  halo2_api.rs  lib.rs  param.rs  snark.rs  types.rs
snark-verifier-sdk/src/aggregation/: aggregation_circuit.rs  config.rs  multi_aggregation_circuit.rs
snark-verifier-sdk/src/evm_circuits/: evm_circuit.rs  mod.rs  mpt_circuit.rs  poseidon_circuit.rs  state_circuit.rs  super_circuit.rs
snark-verifier-sdk/src/halo2/: aggregation.rs
snark-verifier-sdk/src/snark/: mock.rs
snark-verifier-sdk/src/tests/: evm_verifier.rs  mod.rs  single_layer_aggregation.rs  test_circuit_1.rs  test_circuit_2.rs  two_layer_aggregation.rs
snark-verifier/configs/: example_evm_accumulator.config
snark-verifier/examples/: README.md  evm-verifier-with-accumulator.rs  evm-verifier.rs  recursion.rs
snark-verifier/src/: cost.rs  lib.rs  loader.rs  pcs.rs  system.rs  util.rs  verifier.rs
snark-verifier/src/loader/: halo2.rs  native.rs
snark-verifier/src/loader/evm/: loader.rs  test.rs  util.rs
snark-verifier/src/loader/evm/test/: tui.rs
snark-verifier/src/loader/evm/util/: executor.rs
snark-verifier/src/loader/halo2/: loader.rs  shim.rs  test.rs
snark-verifier/src/pcs/: ipa.rs  kzg.rs
snark-verifier/src/pcs/ipa/: accumulation.rs  decider.rs
snark-verifier/src/pcs/ipa/multiopen/: bgh19.rs
snark-verifier/src/pcs/kzg/: accumulation.rs  accumulator.rs  decider.rs
snark-verifier/src/pcs/kzg/multiopen/: bdfg21.rs  gwc19.rs
snark-verifier/src/system/: halo2.rs
snark-verifier/src/system/halo2/: test.rs  transcript.rs
snark-verifier/src/system/halo2/test/: kzg.rs
snark-verifier/src/system/halo2/test/circuit/: maingate.rs  standard.rs
snark-verifier/src/system/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
snark-verifier/src/system/halo2/transcript/: evm.rs  halo2.rs
snark-verifier/src/util/: arithmetic.rs  hash.rs  msm.rs  poly.rs  protocol.rs  transcript.rs
snark-verifier/src/util/hash/: poseidon.rs
snark-verifier/src/verifier/: plonk.rs
src/: lib.rs  loader.rs  verifier.rs
src/configs/: verify_circuit.config  verify_circuit_for_evm.config
src/loader/: halo2.rs  native.rs
src/loader/evm/: loader.rs
src/loader/halo2/: accumulation.rs  loader.rs  poseidon_chip.rs  test.rs  transcript.rs
src/loader/halo2/transcript/: poseidon.rs
src/loader/native/: accumulation.rs  loader.rs
src/pcs/kzg/: accumulator.rs
src/protocol/: halo2.rs
src/protocol/halo2/: test.rs
src/protocol/halo2/test/: circuit.rs  kzg.rs
src/protocol/halo2/test/circuit/: plookup.rs
src/protocol/halo2/test/kzg/: halo2.rs  native.rs
src/protocol/halo2/util/: halo2.rs
src/scheme/kzg/: accumulation.rs
src/scheme/kzg/accumulation/: shplonk.rs
src/system/: halo2.rs
src/system/halo2/: aggregation.rs  test.rs
src/system/halo2/test/: README.md  kzg.rs
src/system/halo2/test/kzg/: evm.rs  halo2.rs  native.rs
src/system/halo2/transcript/: evm.rs  halo2.rs
src/util/: arithmetic.rs
src/verifier/: plonk.rs
